--- a/pl.mn.org
+++ b/pl.mn.org
@@ -15,7 +15,7 @@
 :END:
 The idea here is that =ITextTile= provides an arbitrary interface for creating widgets that /look/ like editable lines of text, so the text cursor can move up and down in what appears to be a flat list of lines.
 
-** TODO [5/10] Refactor the current editor/cursor behavior to use =ITextTile=
+** TODO [6/10] Refactor the current editor/cursor behavior to use =ITextTile=
 :PROPERTIES:
 :TS:       <2013-09-26 05:20PM>
 :ID:       fuzehdz009g0
@@ -59,7 +59,7 @@ The problem is that several parts of the editor use the object's =cursor= direct
 :TS:       <2013-09-28 12:40PM>
 :ID:       z0g3a24039g0
 :END:
-*** TODO have buffer.nodelist use the =rings= unit instead of =li=
+*** DONE have buffer.nodelist use the =rings= unit instead of =li=
 :PROPERTIES:
 :TS:       <2013-09-28 07:35PM>
 :ID:       iek529n039g0
