--- a/st.min.org
+++ b/st.min.org
@@ -11,7 +11,7 @@
 :TS: <2013-01-11 03:35AM>
 :ID: la310m71jzf0
 :END:
-** [1/3] document model (spanning tree into the graph)                  :doc:
+** [1/6] document model (spanning tree into the graph)          :doc:
 :PROPERTIES:
 :TS: <2013-01-03 04:13PM>
 :ID: v971ih00azf0
@@ -29,9 +29,11 @@ A =TBuffer= is essentially a composite version of =ITextTile=.
   type
     TBuffer = class (TTextTile)
       private type
-        cursor = li.nodelist.cursor;
+        TTextNodes = GRing<string>;
+        ITextCursor = IRingCursor<string>;
+        cursor = ITextCursor;
       private
-        nodes : li.nodelist;
+        nodes : TTextNodes;
       public
         constructor Create( w, h : cardinal );
         function  GetLength : cardinal; override;
@@ -46,7 +48,7 @@ A =TBuffer= is essentially a composite version of =ITextTile=.
       end;
 #+end_src
 
-*** TYPE token
+*** TODO TYPE token                                           :unused:
 :PROPERTIES:
 :TS: <2013-01-12 06:41AM>
 :ID: x4i08sh0lzf0
@@ -54,12 +56,12 @@ A =TBuffer= is essentially a composite version of =ITextTile=.
 
 #+name: type:token
 #+begin_src pascal
-  type token = li.strnode;
+  type token = string;
 #+end_src
 
 Just plain old string nodes for now.
 
-*** TYPE anchor                                                    :unused:
+*** TODO TYPE anchor                                          :unused:
 :PROPERTIES:
 :TS: <2013-01-04 02:09AM>
 :ID: 2mxaf3s0azf0
@@ -67,14 +69,14 @@ Just plain old string nodes for now.
 
 #+name: type:anchor
 #+begin_src pascal
-  type anchor = li.objnode;
+  type anchor = TObject;
 #+end_src
 
 Anchors are non-textual, and may hold any kind of data. They correspond roughly to <A> tags in html.
 
 Unlike the generic list cursors, which are pointers to link objects in the linked list, anchors are data objects that are actually part of the buffer. This is so programs that traverse the list are able to see and make use of them.
 
-*** TYPE element
+*** TODO TYPE element                                         :unused:
 :PROPERTIES:
 :TS: <2013-01-12 03:20PM>
 :ID: 8br01s51lzf0
@@ -82,7 +84,7 @@ Unlike the generic list cursors, which are pointers to link objects in the linke
 
 #+name: type:element
 #+begin_src pascal
-  type element = li.lisnode;
+//  type element = li.lisnode;
 #+end_src
 
 *** TODO blocks
